# a3_spl_client

./: CMakeLists.txt  makefile
include/: ConnectionHandler.h  EncoderDecoder.h  KeyboardTask.h  Message.h  Protocol.h  SocketListenTask.h
src/: Client.cpp  ConnectionHandler.cpp  EncoderDecoder.cpp  Message.cpp  Protocol.cpp  connectionHandler.cpp  echoClient.cpp
